--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.5",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+    "enzyme": "^3.11.0",
     "eslint": "^8.26.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-jest": "^27.1.3",
